# okx-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: public_data_get_instruments.rs  rest_get_deposits.rs  rest_get_funding_balances.rs  rest_get_instruments.rs  ws_account.rs  ws_books.rs  ws_instruments.rs
src/: decimal.rs  lib.rs  serde_util.rs
src/api/: blocking.rs  credential.rs  error.rs  mod.rs  options.rs
src/api/v5/: mod.rs  model.rs  public_data.rs  testkit.rs  trading_account.rs  ws_convert.rs
src/api/v5/funding_account/: bill.rs  currencies.rs  deposit.rs  mod.rs  transfer.rs  withdrawal.rs
src/api/v5/orderbook_trading/: fill.rs  market_data.rs  mod.rs  orders.rs
src/book/: book_manager.rs  mod.rs
src/rest_client/: mod.rs  options.rs
src/rest_client/model/: account.rs  bill.rs  currencies.rs  deposit.rs  fill.rs  fund.rs  instruments.rs  market_data.rs  mod.rs  orders.rs  withdrawal.rs
src/time/: mod.rs
src/websocket/: conn.rs  mod.rs
