[package]
name = "okx-rs"
version = "0.1.0"
edition = "2021"
description = "Unofficial Rust Library for the OKX V5 API"
repository = "https://github.com/roytang121/okx-rs/"
license = "MIT OR Apache-2.0"
keywords = ["okx", "crypto", "exchange", "trading"]
authors = ["Roy Tang <me@roytang.me>"]
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
base64 = "0.13.0"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0", features = ["arbitrary_precision"]}
serde_qs = "0.10.1"
rust_decimal = "1.32.0"
anyhow = { version = "1.0.75", features = ["backtrace"] }
log = "0.4.20"
tungstenite = { version = "0.20.1", features = ["native-tls"] }
tokio-tungstenite = { version = "*", features = ["native-tls"] }
url = "2.4.1"
async-trait = "0.1.73"
futures-util = "0.3.28"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
sha2 = { version = "0.10", default-features = false }
digest = { version = "0.10", features = ["dev"] }
hmac = { version = "0.12.1", features = [] }
simd-json = {  version = "0.13.4" , features = ["runtime-detection", "known-key"]}
crossbeam-channel = "0.5.8"
const_format = "0.2"

#[dev-dependencies]
dotenv = "0.15.0"
env_logger = { version = "0.10.0", features = [] }

[features]
default = []
vip = []
simd = []
